syntax = "proto3";

package multi;

option csharp_namespace = "Mobius.Proto.Multi";
option go_package = "github.com/justjack1521/mevium/pkg/genproto/protomulti";

import "protomulti/multi.proto";

enum MultiNotificationType {
  EMPTY = 0;
  PARTICIPANT_JOIN = 100;
  PARTICIPANT_LEAVE = 200;
  PARTICIPANT_READY = 300;
  PARTICIPANT_UNREADY = 400;
  STAMP_SEND = 500;
  PARTICIPANT_DECK_CHANGE = 600;
  LOBBY_CANCEL = 700;
}

message LobbyCancelNotification {
  string lobby_id = 1;
}

message ParticipantJoinNotification {
  string lobby_id = 1;
  string player_id = 2;
  int32 deck_index = 3;
  int32 player_slot = 4;
  ProtoLobbyPlayer player = 5;
}

message ParticipantLeaveNotification {
  string lobby_id = 1;
  string player_id = 2;
  int32 player_slot = 3;
}

message ParticipantReadyNotification {
  string lobby_id = 1;
  int32 player_slot = 3;
}

message ParticipantUnreadyNotification {
  string lobby_id = 1;
  int32 party_slot = 2;
}

message ParticipantDeckChangeNotification {
  string lobby_id = 1;
  int32 player_slot = 3;
  ProtoLobbyPlayer player = 4;
}

message StampSendNotification {
  string lobby_id = 1;
  string stamp_id = 2;
  int32 party_slot = 3;
}